--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
       function drawChart() {
         var data = google.visualization.arrayToDataTable([
           ['Label', 'Value'],
-          ['Speed', 57]
+          ['Speed', speed]
           
         ]);
 
