--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@
         ]);
 
         var options = {
-          width: 400, height: 400,
+          width: 300, height: 300,
           redFrom: 90, redTo: 100,
           yellowFrom:75, yellowTo: 90,
           minorTicks: 5
@@ -25,7 +25,7 @@
 
         var chart = new google.visualization.Gauge(document.getElementById('chart_div'));
         chart.draw(data, options);
-        document.getElementById("speed_div").val = longlat;
+        document.getElementById("speed_div").val = count;
       }
      
         function geolocation() {
