--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
       function drawChart() {
         var data = google.visualization.arrayToDataTable([
           ['Label', 'Value'],
-          ['Speed', speed]
+          ['Speed', count]
           
         ]);
 
