--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
 	        function geolocation() {
 	 
 	            var options = { enableHighAccuracy: true };
-	                watchID = navigator.geolocation.watchPosition(onSuccess, onError, options);
+	                watchID = navigator.geolocation.watchPosition(onSuccess, onError,{frequency:5000,maximumAge: 0, timeout: 100, enableHighAccuracy:true});
 	 
 	            function onSuccess(position) {
 	                var lat = position.coords.latitude;
