--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,8 @@
 <head>
  <script type='text/javascript' src='https://www.google.com/jsapi'></script>	
  <script type='text/javascript' src='res/phonegap-1.2.0.js'></script>
- <script type='text/javascript' src='res/jquery-2.1.1.min.js'></script>    <head>
+ <script type='text/javascript' src='res/jquery-2.1.1.min.js'></script>
+ <link rel="stylesheet" type="text/css" href="res/txtblocker.css">    <head>
     <script type='text/javascript'>
       var speed= 0;
       var long= 0;
@@ -77,6 +78,34 @@
   </head>
  
 </head>
+
+
+<header class="cf">
+<nav>
+	<ul>
+		<li id="login">
+			<a id="login-trigger" href="#">
+				Log in <span>&#x25BC;</span>
+			</a>
+			<div id="login-content">
+				<form>
+					<fieldset id="inputs">
+						<input id="username" type="email" name="Email" placeholder="Your email address" required>   
+						<input id="password" type="password" name="Password" placeholder="Password" required>
+					</fieldset>
+					<fieldset id="actions">
+						<input type="submit" id="submit" value="Log in">
+						<label><input type="checkbox" checked="checked"> Keep me signed in</label>
+					</fieldset>
+				</form>
+			</div>                     
+		</li>
+		<li id="signup">
+			<a href="">Sign up FREE</a>
+		</li>
+	</ul>
+</nav>
+</header>
 <body>
    <!--<input type="button" value="where am i?" onclick="geolocation()">-->
    <div id='chart_div'></div>
@@ -86,6 +115,15 @@
    <div id='map_div'><a href="map.html">Slide Map</a></div>
    
    <script>
+   $(document).ready(function(){
+        $('#login-trigger').click(function(){
+                $(this).next('#login-content').slideToggle();
+                $(this).toggleClass('active');                                  
+
+                if ($(this).hasClass('active')) $(this).find('span').html('u')
+                        else $(this).find('span').html('&#x25BC;')
+                })
+
    var myVar = setInterval(function(){myTimer()}, 55000);
 
 	function myTimer() {
@@ -93,6 +131,8 @@
 	    var t = d.toLocaleTimeString();
 	    document.getElementById("speed2_div").innerHTML = t;
 	}
+	
+	});
    </script>
    
 </body>
