--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
- <script type='text/javascript' src='https://www.google.com/jsapi'></script>	
+ <script type='text/javascript' src='res/jsapi.js'></script>	
  <script type='text/javascript' src='res/phonegap-1.2.0.js'></script>
  <script type='text/javascript' src='res/jquery-2.1.1.min.js'></script>
  <script type='text/javascript' src='res/cordova-1.5.0.js'></script>
@@ -44,6 +44,7 @@
       var speed= 0;
       var long= 0;
       var lat=0;
+      var altitude=0;
       var count = 0;
       
 	      google.load('visualization', '1', {packages:['gauge']});
