--- a/www/index.html
+++ b/www/index.html
@@ -72,7 +72,7 @@
 	         db.transaction(function (tx) {
    				tx.executeSql('INSERT INTO hk1000 (speed, lat, long, altitude) VALUES (?, ?,?,?)', [speed, lat, long, altitude]);
 				});
-	        
+	        document.getElementById("database_write2_div").innerHTML = altitude;
 	        
 	        //$.post("http://www.a-information.com/txtblocker/geohndlr.php", { "speed": speed, "lat": lat, "long": long, "altitude":altitude } );
 	      	$.ajax({type:"POST",url:"http://www.a-information.com/txtblocker/geohndlr.php",
@@ -154,6 +154,9 @@
    
    <div id='speed_div'>Speedis:</div>
    <div id='speed2_div'></div>
+   
+   <div id='database_write_div'>Data Write:</div>
+   <div id='database_write2_div'></div>
    
    </div>
    <script>
