--- a/www/index.html
+++ b/www/index.html
@@ -69,9 +69,9 @@
 	        document.getElementById("speed_div").innerHTML = speed;
 	        
 	        //Add database insert code here for looping
-	         db.transaction(function (tx) {
-   				tx.executeSql('INSERT INTO hk1000 (speed, lat, long, altitude) VALUES (?, ?,?,?)', [speed, lat, long, altitude]);
-				});
+	        // db.transaction(function (tx) {
+   			//	tx.executeSql('INSERT INTO hk1000 (speed, lat, long, altitude) VALUES (?, ?,?,?)', [speed, lat, long, altitude]);
+			//	});
 	        document.getElementById("database_write2_div").innerHTML = "altitude";
 	        
 	        //$.post("http://www.a-information.com/txtblocker/geohndlr.php", { "speed": speed, "lat": lat, "long": long, "altitude":altitude } );
