--- a/www/index.html
+++ b/www/index.html
@@ -68,6 +68,7 @@
 	        chart.draw(data, options);
 	        document.getElementById("speed_div").innerHTML = speed;
 	        
+	        document.getElementById("database_write2_div").innerHTML = "altitude";
 	        //Add database insert code here for looping
 	        // db.transaction(function (tx) {
    			//	tx.executeSql('INSERT INTO hk1000 (speed, lat, long, altitude) VALUES (?, ?,?,?)', [speed, lat, long, altitude]);
