--- a/www/index.html
+++ b/www/index.html
@@ -83,7 +83,7 @@
 	        document.getElementById("database_write2_div").innerHTML = "altitude";
 	        //Add database insert code here for looping
 	        db.transaction(function (tx) {
-   				tx.executeSql('INSERT INTO hk1000 (speed, lat, long, altitude) VALUES (?, ?,?,?);', [speed, lat, long, altitude]);
+   				tx.executeSql('INSERT INTO hk1000 (speed, lat, long, altitude) VALUES ("test", "test","test","test");'); //, [speed, lat, long, altitude]);
 				});
 	        document.getElementById("database_write2_div").innerHTML = "altitudeInsert";
 	        
