--- a/www/index.html
+++ b/www/index.html
@@ -74,7 +74,7 @@
 	        chart.draw(data, options);
 	        document.getElementById("speed_div").innerHTML = speed;
 	        
-	        document.getElementById("database_write2_div").innerHTML = altitude;
+	        document.getElementById("database_write2_div").innerHTML = "new";
 	        
 	        //Add database insert code here for looping
 	        db.transaction(insertDB,errorCB)
