--- a/www/index.html
+++ b/www/index.html
@@ -39,7 +39,9 @@
     // Transaction success callback
     //
     function successCB() {
+        document.getElementById("database_write2_div").innerHTML = "success!";
         alert("success!");
+        
     }
         </script>
     
