--- a/www/index.html
+++ b/www/index.html
@@ -84,7 +84,7 @@
    <div id='speed_div'>Speedis:</div>
    <div id='speed2_div'></div>
    
-   <div id='database_write_div'>Data Write:</div>
+   <div id='database_write_div'>Data Write 2:</div>
    <div id='database_write2_div'></div>
    
    </div>
