--- a/www/index.html
+++ b/www/index.html
@@ -1,15 +1,11 @@
-<!DOCTYPE html>
 <html>
-<head>
- <script type='text/javascript' src='res/jsapi.js'></script>	
- <script type='text/javascript' src='res/phonegap-1.2.0.js'></script>
- <script type='text/javascript' src='res/jquery-2.1.1.min.js'></script>
- <script type='text/javascript' src='res/cordova-1.5.0.js'></script>
+  <head>
+    <title>Contact Example</title>
+<link rel="stylesheet" type="text/css" href="res/txtblocker.css"> 
  
- <script type='text/javascript' src='res/jquery.touchSwipe.min.js'></script>
- <link rel="stylesheet" type="text/css" href="res/txtblocker.css"> 
- <head>
-    <script type='text/javascript'>
+    <script type="text/javascript" charset="utf-8" src="phonegap-1.2.0.js"></script>
+    <script type="text/javascript" charset="utf-8">
+    
      // Wait for PhoneGap to load
     //
     document.addEventListener("deviceready", onDeviceReady, false);
