--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,7 @@
     //
     function onDeviceReady() {
         var db = window.openDatabase("Database", "1.0", "PhoneGap Demo", 200000);
+        document.getElementById("database_write2_div").innerHTML = "open success!";
         db.transaction(populateDB, errorCB, successCB);
     }
 
@@ -21,6 +22,7 @@
     //
     function populateDB(tx) {
          tx.executeSql('DROP TABLE IF EXISTS DEMO');
+         document.getElementById("database_write2_div").innerHTML = "create success!"
          tx.executeSql('CREATE TABLE IF NOT EXISTS DEMO (id unique, data)');
          tx.executeSql('INSERT INTO DEMO (id, data) VALUES (1, "First row")');
          tx.executeSql('INSERT INTO DEMO (id, data) VALUES (2, "Second row")');
