--- a/www/index.html
+++ b/www/index.html
@@ -82,36 +82,12 @@
    
    <div id='speed_div'>Speedis:</div>
    <div id='speed2_div'></div>
-   
-   <div id='database_write_div'>Data Write 2:</div>
+   <br>
+   <br><br><br><br><br>
+   <div id='database_write_div'>Data Write Debug:</div>
    <div id='database_write2_div'></div>
    
    </div>
-   <script>
-   $(document).ready(function(){
-        $('#login-trigger').click(function(){
-                $(this).next('#login-content').slideToggle();
-                $(this).toggleClass('active');                                  
-
-                if ($(this).hasClass('active')) $(this).find('span').html('u')
-                        else $(this).find('span').html('&#x25BC;')
-                })
-                
-        $('#container').swipe({
-        	swipe:function(event, direction, distance, duration, fingerCoount)
-        		{
-        		switch(direction){
-        			case "left":
-        				window.location = 'signup.html';
-        				break;
-        			case "right":
-        				window.location = 'map.html';
-        				break;
-        				}
-        		}
-        	});
-	});
-   </script>
-   
+  
 </body>
 </html>
