--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
     <title>Contact Example</title>
 <link rel="stylesheet" type="text/css" href="res/txtblocker.css"> 
  
-    <script type="text/javascript" charset="utf-8" src="phonegap-1.2.0.js"></script>
+    <script type="text/javascript" charset="utf-8" src="res/phonegap-1.2.0.js"></script>
     <script type="text/javascript" charset="utf-8">
     document.getElementById("database_write2_div").innerHTML = "open ";
      // Wait for PhoneGap to load
@@ -47,7 +47,7 @@
      
   </head>
  
-</head>
+
 
 
 <header class="cf">
