--- a/www/index.html
+++ b/www/index.html
@@ -51,6 +51,12 @@
    <div id='speed2_div'></div>
    <br>
    <br><br><br><br><br>
+   <script type="text/javascript" charset="utf-8">
+    document.getElementById("database_write2_div").innerHTML = "open ";
+     // Wait for PhoneGap to load
+    //
+   
+    </script>
    <div id='database_write_div'>Data Write Debug:</div>
    <div id='database_write2_div'></div>
    
