--- a/www/index.html
+++ b/www/index.html
@@ -57,8 +57,8 @@
     //
    
     </script>
-   <div id='database_write_div'>Data Write Debug:</div>
-   <div id='database_write2_div'></div>
+   <div id='database_write_div'>Data Write Debug 2:</div>
+   <div id='database_write2_div'>Tester</div>
    
    </div>
   
