--- a/www/index.html
+++ b/www/index.html
@@ -51,16 +51,25 @@
    <div id='speed2_div'></div>
    <br>
    <br><br><br><br><br>
-   <script type="text/javascript" charset="utf-8">
+   
+   <div id='database_write_div'>Data Write Debug 2:</div>
+   <div id='database_write2_div'>Tester</div>
+   
+   </div>
+  <script type="text/javascript" charset="utf-8">
     document.getElementById("database_write2_div").innerHTML = "open ";
      // Wait for PhoneGap to load
     //
    
     </script>
-   <div id='database_write_div'>Data Write Debug 2:</div>
-   <div id='database_write2_div'>Tester</div>
-   
-   </div>
-  
+    
+    <p id="myP">This is a p element.</p>
+
+<div id="myDIV">This is a div element.</div>
+
+<script>
+document.getElementById("myP").innerHTML = "yhello Dolly.";
+document.getElementById("myDIV").innerHTML = "How are you?";
+</script>
 </body>
 </html>
