--- a/www/index.html
+++ b/www/index.html
@@ -87,7 +87,7 @@
 	 }
 	
 	 function geolocation() {
-	 
+	 		alert("geolocate ");
 	        var options = { enableHighAccuracy: true };
 	        watchID = navigator.geolocation.watchPosition(onSuccess, onError,{frequency:5000,maximumAge: 0, timeout: 2000, enableHighAccuracy:true});
 	 
@@ -178,7 +178,7 @@
 			</div>                     
 		</li>
 		<li id="signup">
-			<a href="signup.html">Sign up FREE Ver2</a>
+			<a href="signup.html">Sign up FREE Ver 3</a>
 		</li>
 	</ul>
 </nav>
