--- a/www/index.html
+++ b/www/index.html
@@ -200,8 +200,9 @@
      
     <script>   
  		//Runs the main thread at 30 seconds
- 	    var myLoc2 = setInterval(function(){geolocation()},300000);
-	
+ 	    //var myLoc2 = setInterval(function(){geolocation()},300000);
+ 	    alert("timer code");
+	setInterval(function () {geolocation()}, 3000);
 	
 	
 	  
